# SPDX-FileCopyrightText: 2020-2025 Laurent Montel <montel@kde.org>
# SPDX-License-Identifier: BSD-3-Clause
add_subdirectory(expandjson)
add_subdirectory(loadroomcache)
add_subdirectory(unicodeemoticongui)
add_subdirectory(uploadfilewidgetlist)
add_subdirectory(notificationhistorygui)
add_subdirectory(loaddatabasegui)
add_subdirectory(validemoticongui)
add_subdirectory(restauthenticationgui)
add_subdirectory(cmarktestgui)
if(USE_E2E_SUPPORT)
    add_subdirectory(encryptiontestgui)
endif()

add_subdirectory(passwordvalidategui)
add_subdirectory(needupdateparsehtmlgui)
add_subdirectory(needupdatecheckexistingnextversiongui)
add_subdirectory(autogenerateinteractionuigui)
add_subdirectory(serializemessagesgui)
add_subdirectory(newmessageindicatorgui)
add_subdirectory(textdocumenttestgui)
